fix broken CSS for app-bar help button

--- a/app/assets/stylesheets/app-bar.scss
+++ b/app/assets/stylesheets/app-bar.scss
@@ -28,7 +28,6 @@
        color: darken($darker-color, 10%);
   text-align: right;
    font-size: 0.87em;
-       width: 38px;
   }
 
   #tweet-container {
